--- a/pom.xml
+++ b/pom.xml
@@ -34,26 +34,23 @@
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>42.3.3</version>
                 <scope>runtime</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>4.10.0</version>
+            </dependency>
 
             <!--test-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>5.8.2</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>1.4.200</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
