--- a/service/src/test/resources/application.yaml
+++ b/service/src/test/resources/application.yaml
@@ -1,9 +1,7 @@
 spring:
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
   jpa:
     properties:
       hiberante:
         show_sql: true
         format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
