--- a/service/pom.xml
+++ b/service/pom.xml
@@ -28,6 +28,17 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.molodyko</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
