--- a/service/pom.xml
+++ b/service/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.molodyko</groupId>
